[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llamacloud-mcp-lite"
version = "1.0.0"
description = "Lightweight MCP server for LlamaCloud indexes - no heavy SDK dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]
license = "MIT"

[project.scripts]
llamacloud-mcp-lite = "llamacloud_mcp_lite.main:main"

[tool.hatch.build.targets.sdist]
include = ["llamacloud_mcp_lite/"]

[tool.hatch.build.targets.wheel]
include = ["llamacloud_mcp_lite/"]
